--- a/src/TypeScriptSchemaCompare.App/src/app/app.component.html
+++ b/src/TypeScriptSchemaCompare.App/src/app/app.component.html
@@ -2,9 +2,9 @@
 
   <div class="app__compare-container">
 
-    <textarea [formControl]="sourceControl"></textarea>
+    <textarea [formControl]="sourceControl" spellcheck="false"></textarea>
     
-    <textarea [formControl]="compareToControl"></textarea>
+    <textarea [formControl]="compareToControl" spellcheck="false"></textarea>
 
   </div>
   
